fix header content cut off

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -112,9 +112,12 @@ a {
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
   
   @include large {
-    max-width: 64rem;
+    .project-name,.project-tagline{
+      max-width: 64rem;
+      margin: 0 auto;
+    }
+    
     padding: 5rem 6rem;
-    margin: 0 auto;
     font-size: 1.1rem;
   }
 
